dhall/tests/type-inference/failure/unit/AssertDoubleZeros.txt
Type error: error: AssertMismatch
 --> <current file>:1:1
  |
1 | assert : -0.0 ≡ +0.0
  | ^^^^^^^^^^^^^^^^^^^^ AssertMismatch
  |
